# advent-of-python-code

./: README.md  main.py  pyproject.toml
modules/utils/: grid.py  input_reader.py  parsing.py
scripts/: benchmark.py  new_day.py
solutions/year_2015/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py
solutions/year_2025/: day_01.py
