[project]
name = "advent-of-python-code"
version = "0.1.0"
description = "Advent of Code solutions in Python"
requires-python = ">=3.14"
dependencies = [
    "argparse>=1.4.0",
    "pathlib>=1.0.1",
    "typing>=3.10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
